# the-build-examples

./: .doozer.json  .travis.yml  CMakeLists.txt  README.md
docs/: index.md
include/: example.hpp
include/config/: version.hpp
src/: example.cpp
tests/: CMakeLists.txt
tests/src/: example_test.cpp
